# CV-and-Interview-Prep-Builder

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json
.github/workflows/: ci.yml
agents/: README.md  agent_registry.json
ai_gateway/: client.py  config.py  main.py
apps/api/: README.md  alembic.ini  package.json  pyproject.toml  ruff.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: .gitkeep  27b5d335cf20_initial.py
apps/api/src/: config.py  database.py  main.py  models.py
apps/api/src/engine/: ats_optimizer.py  ats_scorer.py  career_repository.py  classification_engine.py  docx_engine.py  embedding_pipeline.py  hybrid_retrieval.py  jd_analyzer.py
apps/api/src/graph/: document_processing.py  evidence_retrieval.py  interview_prep.py  jd_intelligence.py  resume_optimization.py
apps/api/src/routers/: __init__.py  app_settings.py  applications.py  ats.py  cover_letter.py  deps.py  documents.py  evidence.py  interview.py  jd.py  orchestration.py  resume.py
apps/api/src/utils/: ai_client.py  encryption.py  orchestration_agent.py  parsers.py  pdf_generator.py  similarity.py
apps/api/src/workers/: tasks.py
apps/api/tests/: conftest.py  test_ai_gateway.py  test_ats_optimizer.py  test_ats_scorer.py  test_career_repository.py  test_classification_engine.py  test_docx_engine.py  test_embedding_pipeline.py  test_evidence_validation.py  test_hybrid_retrieval.py  test_jd_analyzer.py  test_orchestration.py  test_parsers.py  test_phase4.py  test_utils.py  test_vault.py
apps/api/tests/unit/: __init__.py  test_embedding_pipeline.py  test_similarity.py
apps/web/: package.json  tailwind.config.js  tsconfig.json
ci/: README.md  validation_pipeline.yml
contracts/: README.md
data-governance/: README.md
docs/: README.md  backlog.md  openapi.yaml  production_readiness_review.md  remediation_plan.md
docs/adr/: adr-0001-production-auth-jwt.md  adr-0002-async-database-sessions.md  adr-0003-secure-tenant-isolation-qdrant.md  adr-0004-robust-grounding-hallucination-prevention.md  adr-0005-saas-infrastructure-scaling.md  adr-0006-testing-coverage-ci-integration.md  adr_template.md
docs/runbooks/: production_deployment.md
docs/standards/: engineering_wisdom_os.md
evals/: README.md
git-hooks/: pre-commit
infra/: README.md
infra/db/: schema.sql
infra/docker/: Dockerfile.api  Dockerfile.gateway  Dockerfile.web  docker-compose.yml
knowledge/: README.md  okf_metadata_schema.json
memory/: README.md
observability/: README.md
orchestration/: README.md  discover.js  orchestration_rules.md  orchestrator.js
platform/: README.md  cost_model_governance.json
prompts/: README.md  prompt_pipeline_rules.md
scripts/: README.md  validate_and_update_okf.py
security/: README.md  tool_governance_registry.json
specs/: README.md
tests/: README.md
(+45 files in other folders)
