[tool.poetry]
name = "career-intelligence-studio-api"
version = "1.0.0"
description = "FastAPI backend for Career Intelligence Studio"
authors = ["Principal Architect Agent <architect@agentic.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.0"
redis = "^5.0.0"
celery = "^5.4.0"
litellm = "^1.40.0"
instructor = "^1.3.0"
langgraph = "^0.1.0"
llama-index = "^0.10.0"
python-docx = "^1.1.0"
pypdf = "^4.2.0"
python-multipart = "^0.0.9"
qdrant-client = "^1.9.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.0"
ruff = "^0.4.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
