[tool.poetry]
name = "career-intelligence-studio-api"
version = "1.0.0"
description = "FastAPI backend for Career Intelligence Studio"
authors = ["CIS Engineering <engineering@cis.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.0"
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"
pyjwt = "^2.8.0"
cryptography = "^42.0.0"          # Fernet vault encryption
numpy = "^1.26.0"                  # Cosine similarity calculations
redis = "^5.0.0"
celery = "^5.4.0"
litellm = "^1.40.0"
langgraph = "^0.3.0"              # Upgraded from 0.1 (breaking API changes)
python-docx = "^1.1.0"
pypdf = "^4.2.0"
python-multipart = "^0.0.9"
qdrant-client = "^1.9.0"
httpx = "^0.27.0"
sentence-transformers = "^3.0.0"  # Fallback embedding model for validation
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
black = "^24.4.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
bandit = "^1.7.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "PIE", "T20"]
ignore = ["S101", "E501"]  # Allow assert in tests; line-length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
skips = ["B101"]  # Allow assert statements
